# EinsumNetworks

./: README.md  setup.cfg
src/: datasets.py  demo_mnist.py  eval_svhn_mixture.py  train_svhn_mixture.py
src/EinsumNetwork/: ExponentialFamilyArray.py
