[metadata]
name = EinsumNetwork
version = 0.1.0

[options]
packages = EinsumNetwork
package_dir =
    =src
install_requires = # versions are relaxed
    torch>=1.5.1
    torchvision>=0.6.1
    numpy>=1.17.4
    scikit-learn>=0.23.1
    matplotlib>=3.1.1
    seaborn>=0.10.1
    networkx>=2.4.0
    tqdm>=4.47.0
    filelock>=3.0.12

[options.packages.find]
where = src
